apps/sabnzbd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
