apps/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: http-proxy
      port: 8888
      targetPort: 8888
  type: ClusterIP
