apps/sabnzbd/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: sabnzbd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
  tls:
    secretName: sabnzbd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-http
  namespace: sabnzbd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sabnzbd.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: sabnzbd
          port: 8080
